gnome-boxes assert failure: gnome-boxes: ../../../../src/cairo-surface.c:955: cairo_surface_destroy: La declaración `CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)' no se cumple.
Open bug in launchpad.net
https://bugs.launchpad.net/bugs/1859624
Description
"Start remote session: win10"
Version of gnome-boxes
Package: gnome-boxes 3.34.3-1
BackTrace
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
set = {__val = {0, 140080186366128, 93990991790080, 93987915704880, 93987915704981, 93987915704880, 93987915704880, 93987915705043, 93987915705180, 93987915704880, 93987915705180, 0, 0, 0, 0, 0}}
pid = <optimized out>
tid = <optimized out>
ret = <optimized out>
#1 0x00007f66f5b81899 in __GI_abort () at abort.c:79
save_stage = 1
act = {__sigaction_handler = {sa_handler = 0x557b44542a30, sa_sigaction = 0x557b44542a30}, sa_mask = {__val = {163, 4, 0, 0, 140080186351755, 140080187516014, 0, 21474836480, 2913600384, 140080036539481, 140080036539481, 0, 11127719864241361920, 140080187516014, 140079821479936, 140080036539481}}, sa_flags = -111057840, sa_restorer = 0x3bb}
sigs = {__val = {32, 0 <repeats 15 times>}}
#2 0x00007f66f5b81769 in __assert_fail_base (fmt=0x7f66ecd16c59 <error: Cannot access memory at address 0x7f66ecd16c59>, assertion=0x7f66f9616498 "CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)", file=0x7f66f9616450 "../../../../src/cairo-surface.c", line=955, function=<optimized out>) at assert.c:92
str = 0x557b44542a30 "@0\342B{U"
total = 4096
#3 0x00007f66f5b93006 in __GI___assert_fail (assertion=assertion@entry=0x7f66f9616498 "CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)", file=file@entry=0x7f66f9616450 "../../../../src/cairo-surface.c", line=line@entry=955, function=function@entry=0x7f66f96169f0 <__PRETTY_FUNCTION__.14013> "cairo_surface_destroy") at assert.c:101
No locals.
#4 0x00007f66f95a61d4 in INT_cairo_surface_destroy (surface=0x557b43cd4050) at ../../../../src/cairo-surface.c:955
__PRETTY_FUNCTION__ = "cairo_surface_destroy"
#5 0x00007f66fa130e52 in frdp_session_update_mouse_pointer () from /tmp/apport_sandbox_vl_nyrj1/usr/lib/x86_64-linux-gnu/gnome-boxes/libgtk-frdp-0.1.so
No symbol table info available.
#6 0x00007f66fa131177 in frdp_Pointer_SetNull () from /tmp/apport_sandbox_vl_nyrj1/usr/lib/x86_64-linux-gnu/gnome-boxes/libgtk-frdp-0.1.so
No symbol table info available.
#7 0x00007f66f59a59cf in fastpath_recv_update (fastpath=fastpath@entry=0x7f66d0013480, updateCode=updateCode@entry=5 '\005', s=0x7f66d00134f0) at ./libfreerdp/core/fastpath.c:414
pointer_system = {type = 0}
rc = 0
status = 0
update = <optimized out>
context = 0x7f66d0004170
pointer = 0x7f66d00127c0
__FUNCTION__ = "fastpath_recv_update"
#8 0x00007f66f59a5fff in fastpath_recv_update_data (s=0x7f66d149b800, fastpath=0x7f66d0013480) at ./libfreerdp/core/fastpath.c:565
size = <optimized out>
status = 0
compression = <optimized out>
compressionFlags = <optimized out>
transport = 0x7f66d0013a10
rdp = <optimized out>
bulkStatus = <optimized out>
updateCode = 5 '\005'
fragmentation = 0 '\000'
DstSize = 0
pDstData = 0x7f66d06969f6 "\200h"
status = <optimized out>
size = <optimized out>
rdp = <optimized out>
bulkStatus = <optimized out>
updateCode = <optimized out>
fragmentation = <optimized out>
compression = <optimized out>
compressionFlags = <optimized out>
DstSize = <optimized out>
pDstData = <optimized out>
transport = <optimized out>
__FUNCTION__ = "fastpath_recv_update_data"
totalSize = <optimized out>
#9 fastpath_recv_updates (fastpath=0x7f66d0013480, s=s@entry=0x7f66d149b800) at ./libfreerdp/core/fastpath.c:648
update = 0x7f66d00125a0
__FUNCTION__ = "fastpath_recv_updates"
#10 0x00007f66f599fec0 in rdp_recv_fastpath_pdu (s=0x7f66d149b800, rdp=0x7f66d0003dc0) at ./libfreerdp/core/rdp.c:1364
length = 4
fastpath = 0x7f66d0013480
length = <optimized out>
fastpath = <optimized out>
__FUNCTION__ = "rdp_recv_fastpath_pdu"
flags = <optimized out>
#11 rdp_recv_pdu (rdp=rdp@entry=0x7f66d0003dc0, s=s@entry=0x7f66d149b800) at ./libfreerdp/core/rdp.c:1372
No locals.
#12 0x00007f66f59a0b0b in rdp_recv_callback (transport=<optimized out>, s=0x7f66d149b800, extra=0x7f66d0003dc0) at ./libfreerdp/core/rdp.c:1540
status = 0
rdp = 0x7f66d0003dc0
__FUNCTION__ = "rdp_recv_callback"
#13 0x00007f66f59a985c in transport_check_fds (transport=transport@entry=0x7f66d0013a10) at ./libfreerdp/core/transport.c:1039
status = 6
recv_status = <optimized out>
received = 0x7f66d149b800
now = <optimized out>
dueDate = 8348377
__FUNCTION__ = "transport_check_fds"
#14 0x00007f66f59a10b4 in rdp_check_fds (rdp=0x7f66d0003dc0) at ./libfreerdp/core/rdp.c:1598
status = <optimized out>
transport = 0x7f66d0013a10
__FUNCTION__ = "rdp_check_fds"
#15 0x00007f66f598aaaf in freerdp_check_fds (instance=0x7f66d0006800) at ./libfreerdp/core/freerdp.c:335
status = <optimized out>
rdp = <optimized out>
__FUNCTION__ = "freerdp_check_fds"
#16 0x00007f66f598b936 in freerdp_check_event_handles (context=0x7f66d0004170) at ./libfreerdp/core/freerdp.c:384
status = <optimized out>
__FUNCTION__ = "freerdp_check_event_handles"
#17 0x00007f66fa13136e in update () from /tmp/apport_sandbox_vl_nyrj1/usr/lib/x86_64-linux-gnu/gnome-boxes/libgtk-frdp-0.1.so
No symbol table info available.
#18 0x00007f66f9f0adae in g_main_context_dispatch () from /tmp/apport_sandbox_vl_nyrj1/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#19 0x00007f66f9f0b160 in g_main_context_iterate.isra () from /tmp/apport_sandbox_vl_nyrj1/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#20 0x00007f66f9f0b203 in g_main_context_iteration () from /tmp/apport_sandbox_vl_nyrj1/usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#21 0x00007f66f9409c75 in g_application_run (application=0x557b42cad180, argc=<optimized out>, argv=<optimized out>) at ../../../gio/gapplication.c:2559
arguments = 0x557b42cbf430
status = 0
context = 0x557b42cb0dc0
acquired_context = 1
__func__ = "g_application_run"
#22 0x0000557b4269de51 in _vala_main ()
No symbol table info available.
#23 0x00007f66f5b831e3 in __libc_start_main (main=0x557b4265bea0 <main>, argc=2, argv=0x7ffdadaa0c28, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffdadaa0c18) at ../csu/libc-start.c:308
self = <optimized out>
result = <optimized out>
unwind_buf = {cancel_jmp_buf = {{jmp_buf = {0, 3076426787524802829, 93987883302592, 140727517056032, 0, 0, 9204361853760272653, 9118318591178406157}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x7ffdadaa0c40, 0x7f66fa167190}, data = {prev = 0x0, cleanup = 0x0, canceltype = -1381364672}}}
not_first_call = <optimized out>
#24 0x0000557b4265beee in _start ()
No symbol table info available.