frdp-session: Fix cairo_surface_t double free

Fixes: https://gitlab.gnome.org/GNOME/gtk-frdp/-/issues/23